--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
 	<header>
 		<div class="container">
-			<div class="row">
+			<div class="row ">
 				<div class="col-lg-2">
 					<h1>Portfolio</h1>
 				</div>
 			</div>
 		</div>		
 	</header>
-	<section class="window">
+	<section class="window persoective">
 		<div class="window__label">
 			<div class="container">
 				<div class="row">
